[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Label_styleboxflat.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Talents/Talents_Creator.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.264893, 0.345484, 0.484375, 1 )

[node name="Panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.5
margin_top = -313.5
margin_right = 301.5
margin_bottom = 313.5
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 603.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_styles/normal = ExtResource( 1 )
text = "Talent Creator"
align = 1
valign = 1

[node name="Button" type="Button" parent="VBoxContainer/Label"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -43.5
margin_top = 7.5
margin_right = -11.5
margin_bottom = 39.5
rect_min_size = Vector2( 32, 32 )
text = "X"

[node name="Container" type="Container" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 603.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 603.0
margin_bottom = 103.0

[node name="Container2" type="Container" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )

[node name="Name_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_top = 8.0
margin_right = 66.0
margin_bottom = 22.0
text = "Name:"

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 207.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="Container3" type="Container" parent="VBoxContainer/HBoxContainer"]
margin_left = 211.0
margin_right = 231.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )

[node name="Class" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 235.0
margin_right = 463.0
margin_bottom = 30.0
alignment = 1

[node name="Container2" type="Container" parent="VBoxContainer/HBoxContainer/Class"]
visible = false
margin_right = 20.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Class"]
margin_top = 8.0
margin_right = 37.0
margin_bottom = 22.0
text = "Class:"

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Class"]
margin_left = 41.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 163, 30 )

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer/Class/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 163, 30 )
focus_mode = 2
text = "..."
items = [ "Druid", null, 0, false, false, 0, 0, null, "", false, "Fighter", null, 0, false, false, 1, 0, null, "", false, "Hunter", null, 0, false, false, 2, 0, null, "", false, "Minstrel", null, 0, false, false, 3, 0, null, "", false, "Peddler", null, 0, false, false, 4, 0, null, "", false, "Rider", null, 0, false, false, 5, 0, null, "", false, "Rogue", null, 0, false, false, 6, 0, null, "", false, "Sorceror", null, 0, false, false, 7, 0, null, "", false, "General", null, 0, false, false, 8, 0, null, "", false, "Kin", null, 0, false, false, 9, 0, null, "", false ]

[node name="Container3" type="Container" parent="VBoxContainer/HBoxContainer/Class"]
margin_left = 208.0
margin_right = 228.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )

[node name="Rank" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 467.0
margin_right = 603.0
margin_bottom = 30.0

[node name="Rank" type="Label" parent="VBoxContainer/HBoxContainer/Rank"]
margin_top = 8.0
margin_right = 34.0
margin_bottom = 22.0
text = "Rank:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer/Rank"]
margin_left = 38.0
margin_right = 112.0
margin_bottom = 30.0
max_value = 3.0
align = 1

[node name="Container3" type="Container" parent="VBoxContainer/HBoxContainer/Rank"]
margin_left = 116.0
margin_right = 136.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )

[node name="Container2" type="Container" parent="VBoxContainer"]
visible = false
margin_top = 107.0
margin_right = 603.0
margin_bottom = 127.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 603.0
margin_bottom = 111.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 603.0
margin_bottom = 591.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 591.0
margin_bottom = 682.0
size_flags_horizontal = 3

[node name="Rank01" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 591.0
margin_bottom = 218.0

[node name="Container" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank01"]
margin_right = 20.0
margin_bottom = 218.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank01"]
margin_left = 24.0
margin_right = 567.0
margin_bottom = 218.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank01/VBoxContainer"]
margin_right = 543.0
margin_bottom = 14.0
text = "Rank 01:"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank01/VBoxContainer"]
margin_top = 18.0
margin_right = 543.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 200 )
fold_gutter = true
wrap_enabled = true

[node name="Container2" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank01"]
margin_left = 571.0
margin_right = 591.0
margin_bottom = 218.0
rect_min_size = Vector2( 20, 0 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 591.0
margin_bottom = 226.0

[node name="Rank02" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 591.0
margin_bottom = 448.0

[node name="Container" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank02"]
margin_right = 20.0
margin_bottom = 218.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank02"]
margin_left = 24.0
margin_right = 567.0
margin_bottom = 218.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank02/VBoxContainer"]
margin_right = 543.0
margin_bottom = 14.0
text = "Rank 02:"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank02/VBoxContainer"]
margin_top = 18.0
margin_right = 543.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 200 )
fold_gutter = true
wrap_enabled = true

[node name="Container2" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank02"]
margin_left = 571.0
margin_right = 591.0
margin_bottom = 218.0
rect_min_size = Vector2( 20, 0 )

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 591.0
margin_bottom = 456.0

[node name="Rank03" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 460.0
margin_right = 591.0
margin_bottom = 678.0

[node name="Container" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank03"]
margin_right = 20.0
margin_bottom = 218.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank03"]
margin_left = 24.0
margin_right = 567.0
margin_bottom = 218.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank03/VBoxContainer"]
margin_right = 543.0
margin_bottom = 14.0
text = "Rank 03:"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank03/VBoxContainer"]
margin_top = 18.0
margin_right = 543.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 200 )
fold_gutter = true
wrap_enabled = true

[node name="Container2" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer/Rank03"]
margin_left = 571.0
margin_right = 591.0
margin_bottom = 218.0
rect_min_size = Vector2( 20, 0 )

[node name="Container" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 682.0
margin_right = 591.0
margin_bottom = 682.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 587.0
margin_right = 603.0
margin_bottom = 591.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 595.0
margin_right = 603.0
margin_bottom = 627.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0.185394, 0.221218, 0.316406, 1 )

[node name="Save" type="Button" parent="VBoxContainer/ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -41.0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Save"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 592.0
margin_right = 603.0
margin_bottom = 627.0
rect_min_size = Vector2( 0, 35 )
alignment = 2

[connection signal="button_up" from="VBoxContainer/Label/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/ColorRect/Save" to="." method="_on_Save_button_up"]
